--- a/config.yaml
+++ b/config.yaml
@@ -3,3 +3,7 @@ data_ingestion:
   root_dir: artifacts/data_ingestion
   source_url: "koushik7198/Samsung-samsum_processed"
   local_data_file: "artifacts/data_ingestion/Samsung-samsum" 
+data_transformation:
+  root_dir: artifacts/data_transformation
+  data_path: artifacts\data_ingestion\Samsung-samsum
+  tokenizer_name: "google/pegasus-cnn_dailymail"
