--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -27,9 +27,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install flake8 pytest
+          pip install black flake8 pytest
 
       - name: Lint and Test
         run: |
-          flake8 src/
+          black src/
+          flake8 src/ --max-line-length=120 --extend-ignore=E203,W503
           pytest || echo "No tests yet"
