--- a/params.yaml
+++ b/params.yaml
@@ -1,1 +1,10 @@
-test: "test"
+TrainingArguments:
+  num_train_epochs: 1
+  warmup_steps: 500
+  per_device_train_batch_size: 1
+  gradient_accumulation_steps: 2
+  weight_decay: 0.01
+  logging_steps: 10
+  eval_strategy: steps
+  eval_steps: 100
+  save_steps: 500
