--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
 venv/
 artifacts/
 logs/
-textsummarizer
 mlruns/
 .ipynb_checkpoints/
 */.ipynb_checkpoints/
-Lessons_learned.docx
+__pycache__/
+*.pyc
 
 
 
